--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
-{
-    "emmet.includeLanguages": {
-    "django-html": "html",
-},
-}
+// {
+//     "emmet.includeLanguages": {
+//     "django-html": "html",
+// },
+// }
